# calculator

./: .gitignore  CMakeLists.txt  README.md  main.cpp
components/: Calculator.cpp  Calculator.h  ExpressionParser.cpp  ExpressionParser.h  LoaderLibrary.cpp  LoaderLibrary.h  Processor.cpp  Processor.h  SharedLibrary.cpp  SharedLibrary.h
libs/: funcln.h  funcos.cpp  funcos.h  funcpow.h  funcsin.cpp
plugins/ln/: funcln.cpp
plugins/pow/: funcpow.cpp
plugins/sin/: funcsin.h
